# internal/core/entity/redirect.go
@@ -2,6 +2,8 @@ package entity
 
 import (
 	"time"
+
+	redirecttype "fernandoglatz/url-management/internal/core/entity/redirect"
 )
 
 type Redirect struct {
@@ -9,7 +11,7 @@ type Redirect struct {
 	CreatedAt time.Time `json:"createdAt" bson:"createdAt"`
 	UpdatedAt time.Time `json:"updatedAt" bson:"updatedAt"`
 
-	DNS         string `json:"dns,omitempty" bson:"dns,omitempty"`
-	Destination string `json:"destination,omitempty" bson:"destination,omitempty"`
-	Proxy       bool   `json:"proxy" bson:"proxy"`
+	DNS         string            `json:"dns,omitempty" bson:"dns,omitempty"`
+	Destination string            `json:"destination,omitempty" bson:"destination,omitempty"`
+	Type        redirecttype.Type `json:"type" bson:"type" swaggertype:"string" enums:"PROXY,REDIRECT,IFRAME"`
 }
