# internal/core/model/request/redirect_request.go
@@ -1,8 +1,11 @@
 package request
 
+import (
+	redirecttype "fernandoglatz/url-management/internal/core/entity/redirect"
+)
+
 type RedirectRequest struct {
-	DNS         string `json:"dns,omitempty"`
-	URI         string `json:"uri,omitempty"`
-	Destination string `json:"destination,omitempty"`
-	Proxy       bool   `json:"proxy"`
+	DNS         string            `json:"dns,omitempty"`
+	Destination string            `json:"destination,omitempty"`
+	Type        redirecttype.Type `json:"type" swaggertype:"string" enums:"PROXY,REDIRECT,IFRAME"`
 }
